uvicorn.log
INFO:     Started server process [78365]
INFO:     Waiting for application startup.
Scheduler initialised.
All scheduler tasks started (including Auto Trade Background Loop).
Started Paper Trade Manager background loop.
OI Snapshot loop started.
IV history loop started.
Pre-market report loop started.
Bulk deals loop started.
DB cleanup loop started.
Trade tracker sampler loop started (15 min interval).
Trade tracker price updater loop started (5 min interval).
ML retrain loop started.
Auto Trade background loop started (15 min interval).
INFO:     Application startup complete.
INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)

╔══════════════════════════════════════════════════════╗
║       NSE F&O OPTION CHAIN SCANNER v3.0              ║
╠══════════════════════════════════════════════════════╣
║  API:    http://localhost:8000                        ║
║  Docs:   http://localhost:8000/docs                   ║
║  Debug:  http://localhost:8000/api/debug/NIFTY        ║
╚══════════════════════════════════════════════════════╝

✅ DB initialised (v4)
Redis not installed — using in-memory cache (not suitable for production)
INFO:     127.0.0.1:59214 - "GET /api/fo-trades HTTP/1.1" 500 Internal Server Error
ERROR:    Exception in ASGI application
Traceback (most recent call last):
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/uvicorn/protocols/http/h11_impl.py", line 409, in run_asgi
    result = await app(  # type: ignore[func-returns-value]
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/uvicorn/middleware/proxy_headers.py", line 60, in __call__
    return await self.app(scope, receive, send)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/fastapi/applications.py", line 1138, in __call__
    await super().__call__(scope, receive, send)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/starlette/applications.py", line 113, in __call__
    await self.middleware_stack(scope, receive, send)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/starlette/middleware/errors.py", line 186, in __call__
    raise exc
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/starlette/middleware/errors.py", line 164, in __call__
    await self.app(scope, receive, _send)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/starlette/middleware/cors.py", line 85, in __call__
    await self.app(scope, receive, send)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/starlette/middleware/exceptions.py", line 63, in __call__
    await wrap_app_handling_exceptions(self.app, conn)(scope, receive, send)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/starlette/_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/starlette/_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/fastapi/middleware/asyncexitstack.py", line 18, in __call__
    await self.app(scope, receive, send)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/starlette/routing.py", line 716, in __call__
    await self.middleware_stack(scope, receive, send)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/starlette/routing.py", line 736, in app
    await route.handle(scope, receive, send)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/starlette/routing.py", line 290, in handle
    await self.app(scope, receive, send)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/fastapi/routing.py", line 121, in app
    await wrap_app_handling_exceptions(app, request)(scope, receive, send)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/starlette/_exception_handler.py", line 53, in wrapped_app
    raise exc
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/starlette/_exception_handler.py", line 42, in wrapped_app
    await app(scope, receive, sender)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/fastapi/routing.py", line 107, in app
    response = await f(request)
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/fastapi/routing.py", line 426, in app
    raw_response = await run_endpoint_function(
  File "/Users/aayan/Library/Python/3.9/lib/python/site-packages/fastapi/routing.py", line 314, in run_endpoint_function
    return await dependant.call(**values)
  File "/Users/aayan/Desktop/fo-scanner/backend/main.py", line 1448, in fo_trades_endpoint
    from .fo_trades import run_pipeline
  File "/Users/aayan/Desktop/fo-scanner/backend/fo_trades.py", line 92
    \"\"\"
         ^
SyntaxError: unexpected character after line continuation character
INFO:     Shutting down
INFO:     Waiting for application shutdown.
Lifespan cleanup: Sessions and cache closed.
INFO:     Application shutdown complete.
INFO:     Finished server process [78365]
